<resources>
    <string name="app_name">Navigation Cicerone Example</string>
    <string name="open_welcome_scenario_button">Open welcome scenario</string>
    <string name="open_main_screen_button">Open main screen</string>
    <string name="intro_screen_title">Intro screen</string>
    <string name="welcome_screen_title">Welcome scenario</string>
    <string name="open_next_step_button">Open next step</string>
    <string name="finish_welcome_scenario_button">Finish welcome scenario</string>
    <string name="first_tab_title">Question and answers</string>
    <string name="second_tab_title">Home</string>
    <string name="third_tab_title">Account</string>
    <string name="go_next_button">Go next</string>
    <string name="open_sell_screen_button">Open sell screen</string>
    <string name="sell_screen_title">This is sell screen!</string>
    <string name="reset_welcome_scenario_button">Reset welcome scenario</string>
    <string name="open_profile_button">Open profile (second activity)</string>
    <string name="profile_screen_title">Profile screen</string>
</resources>