<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="24dp">

    <TextView
        android:id="@+id/title"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="Tab name" />

    <TextView
        android:id="@+id/screen_chain"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        tools:text="1 -> 2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/go_next_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_sell_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/open_sell_screen_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_welcome_scenario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/reset_welcome_scenario_button" />

</LinearLayout>